--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -5,5 +5,15 @@
 </ion-header>
 
 <ion-content>
-  
+  <ion-card>
+    <img src="https://blog.goodsam.com/wp-content/uploads/2019/10/Image-1_LO-400x190.jpg"/>
+  </ion-card>
+
+  <ion-card>
+    <img src="http://foodlover360.com/wp-content/uploads/2012/08/loire-400x190.png"/>
+  </ion-card>
+
+  <ion-card>
+    <img src="https://blog.goodsam.com/wp-content/uploads/2019/10/Image-1_LO-400x190.jpg"/>
+  </ion-card>
 </ion-content>
