--- a/src/app/meatrecipes/meatrecipes.page.html
+++ b/src/app/meatrecipes/meatrecipes.page.html
@@ -8,5 +8,15 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-searchbar showcancelbutton="" (keyup)="filterList($event)"></ion-searchbar>
+  <ion-card *ngFor="let item of recipeList">
+    <img src="../../assets/images/{{ item.image }}.jpg"/>
+    <ion-card-header>
+      <ion-card-subtitle>Bevat {{ item.ingredient }}</ion-card-subtitle>
+      <ion-card-title>{{item.name}}</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      Lekker vegetarisch en gezond!
+    </ion-card-content>
+  </ion-card>
 </ion-content>
