--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>tab2</ion-title>
+    <ion-title>Beste recepten</ion-title>
+    <ion-buttons slot='start'>
+      <ion-menu-button ></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
