--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -44,9 +44,94 @@
             </ion-select>
           </ion-item>
 
-          <div class="ion-padding">
-            <ion-button (click)= "toSecondPage()"expand="block" type="submit" class="ion-no-margin">Ga naar stap 2</ion-button>
+          <div class="ion-text-center">
+            <h1>Stap 2</h1>
+        </div>
+
+        <div class="ion-text-center">
+          <h4>Voor wanneer is het gerecht?</h4>
+      </div>
+
+      <ion-item>
+        <ion-checkbox color="dark" slot="start"></ion-checkbox>
+        <ion-label>Ochtend</ion-label>
+      </ion-item>
+      <ion-item>
+          <ion-checkbox color="dark" slot="start"></ion-checkbox>
+          <ion-label>Middag</ion-label>
+        </ion-item>
+        <ion-item>
+            <ion-checkbox color="dark" slot="start"></ion-checkbox>
+            <ion-label>Avond</ion-label>
+          </ion-item>
+
+          <div class="ion-text-center">
+              <h4>Voor hoeveel personen is het gerecht?</h4>
           </div>
+
+          <ion-list>
+            <ion-item>
+              <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" inputmode="text" placeholder="Voer aantal personen in" required="true"></ion-input>
+              <ion-icon name="md-contacts" slot="end"></ion-icon>
+            </ion-item>
+          </ion-list>
+
+            <div class="ion-text-center">
+                <h4>Hoelang duurt het bereiden van het gerecht?</h4>
+            </div>
+
+            <ion-list>
+              <ion-item>
+                <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" inputmode="text" placeholder="Voer een naam in" required="true"></ion-input>
+                <ion-icon name="md-timer" slot="end"></ion-icon>
+              </ion-item>
+            </ion-list>
+
+            <div class="ion-text-center">
+              <h1>Stap 3</h1>
+          </div>
+
+          <ion-list lines="none">
+            <form [formGroup]="myForm">
+              <ion-item *ngFor="let control of myForm.controls | keyvalue">
+                <ion-input required type="text" [formControlName]="control.key" placeHolder="Voer hier je beschrijving in"></ion-input>
+                <ion-icon (click)="removeControl(control)" name="close-circle"></ion-icon>
+              </ion-item>
+            </form>
+          </ion-list>
+
+          <ion-button expand="full" color="light" (click)="addControl()">Voeg een stap toe</ion-button>
+
+          <div class="ion-text-center">
+            <h1>Stap 4</h1>
+        </div>
+
+        <div class="ion-text-center">
+          <h4>Voeg een foto toe</h4>
+      </div>
+
+
+
+      <div class="ion-text-center">
+        <h4>Voeg een video toe</h4>
+    </div>
+      
+
+    <ion-list>
+      <ion-item>
+        <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" inputmode="text" placeholder="Voeg een URL van een video toe" required="true"></ion-input>
+        <ion-icon name="share-alt" slot="end"></ion-icon>
+      </ion-item>
+    </ion-list>
+
+
+
+
+
+          <div class="ion-padding">
+            <ion-button (click)= "toFourthPage()"expand="block" type="submit" class="ion-no-margin">Voeg het recept toe</ion-button>
+          </div>
+  
      
   </div>
 </ion-content>
