--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -9,14 +9,14 @@
 
 <ion-content>
   <ion-card tappable (click)="toMeatRecipes()" >
-    <img src="https://i.pinimg.com/474x/22/98/74/2298741305b9b27b3e605f69b12445ec.jpg"/>
+    <img src="../../assets/images/category-meat.png"/>
   </ion-card>
 
   <ion-card tappable (click)="toFishRecipes()" >
-    <img src="http://foodlover360.com/wp-content/uploads/2012/08/loire-400x190.png"/>
+    <img src="../../assets/images/category-fish.png"/>
   </ion-card>
 
   <ion-card tappable (click)="toVeganRecipes()" >
-    <img src="https://dtphx.org/wp-content/uploads/2015/07/carrotsaladrectangle-400x180.jpg"/>
+    <img src="../../assets/images/category-vegetarian.png"/>
   </ion-card>
 </ion-content>
