--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -11,9 +11,9 @@
 
 <ion-content>
   <div class="ion-padding">
-      <ion-toolbar>
-          <ion-title><h1>Stap 1</h1></ion-title>
-        </ion-toolbar>
+    <div class="ion-text-center">
+      <h1>Stap 1</h1>
+  </div>
         <div class="ion-text-center">
             <h4>Geef het recept een naam</h4>
         </div>
