--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -4,7 +4,7 @@
       Recept toevoegen
     </ion-title>
     <ion-buttons slot='start'>
-      <ion-menu-button ></ion-menu-button>
+      <ion-menu-button></ion-menu-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -13,130 +13,131 @@
   <div class="ion-padding">
     <div class="ion-text-center">
       <h1>Stap 1</h1>
-  </div>
-        <div class="ion-text-center">
-            <h4>Geef het recept een naam</h4>
-        </div>
-
-        <ion-list>
-            <ion-item>
-              <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" inputmode="text" placeholder="Voer een naam in" required="true"></ion-input>
-              <ion-icon name="md-create" slot="end"></ion-icon>
-            </ion-item>
-          </ion-list>
-
-          <div class="ion-text-center">
-              <h4>Selecteer de ingrediënten die nodig zijn voor het recept</h4>
-          </div>
-          <ion-item>
-            <ion-label>ingrediënten</ion-label>
-            <ion-select multiple="true" cancelText="Cancel" okText="Select">
-              <ion-select-option value="bacon">Bacon</ion-select-option>
-              <ion-select-option value="olives">Black Olives</ion-select-option>
-              <ion-select-option value="xcheese">Extra Cheese</ion-select-option>
-              <ion-select-option value="peppers">Green Peppers</ion-select-option>
-              <ion-select-option value="mushrooms">Mushrooms</ion-select-option>
-              <ion-select-option value="onions">Onions</ion-select-option>
-              <ion-select-option value="pepperoni">Pepperoni</ion-select-option>
-              <ion-select-option value="pineapple">Pineapple</ion-select-option>
-              <ion-select-option value="sausage">Sausage</ion-select-option>
-              <ion-select-option value="Spinach">Spinach</ion-select-option>
-            </ion-select>
-          </ion-item>
-
-          <div class="ion-text-center">
-            <h1>Stap 2</h1>
-        </div>
-
-        <div class="ion-text-center">
-          <h4>Voor wanneer is het gerecht?</h4>
-      </div>
-
-      <ion-item>
-        <ion-checkbox color="dark" slot="start"></ion-checkbox>
-        <ion-label>Ochtend</ion-label>
-      </ion-item>
-      <ion-item>
-          <ion-checkbox color="dark" slot="start"></ion-checkbox>
-          <ion-label>Middag</ion-label>
-        </ion-item>
-        <ion-item>
-            <ion-checkbox color="dark" slot="start"></ion-checkbox>
-            <ion-label>Avond</ion-label>
-          </ion-item>
-
-          <div class="ion-text-center">
-              <h4>Voor hoeveel personen is het gerecht?</h4>
-          </div>
-
-          <ion-list>
-            <ion-item>
-              <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" inputmode="text" placeholder="Voer aantal personen in" required="true"></ion-input>
-              <ion-icon name="md-contacts" slot="end"></ion-icon>
-            </ion-item>
-          </ion-list>
-
-            <div class="ion-text-center">
-                <h4>Hoelang duurt het bereiden van het gerecht?</h4>
-            </div>
-
-            <ion-list>
-              <ion-item>
-                <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" inputmode="text" placeholder="Voer een naam in" required="true"></ion-input>
-                <ion-icon name="md-timer" slot="end"></ion-icon>
-              </ion-item>
-            </ion-list>
-
-            <div class="ion-text-center">
-              <h1>Stap 3</h1>
-          </div>
-
-          <ion-list lines="none">
-            <form [formGroup]="myForm">
-              <ion-item *ngFor="let control of myForm.controls | keyvalue">
-                <ion-input required type="text" [formControlName]="control.key" placeHolder="Voer hier je beschrijving in"></ion-input>
-                <ion-icon (click)="removeControl(control)" name="close-circle"></ion-icon>
-              </ion-item>
-            </form>
-          </ion-list>
-
-          <ion-button expand="full" color="light" (click)="addControl()">Voeg een stap toe</ion-button>
-
-          <div class="ion-text-center">
-            <h1>Stap 4</h1>
-        </div>
-
-        <div class="ion-text-center">
-          <h4>Voeg een foto toe</h4>
-      </div>
-
-
-
-      <div class="ion-text-center">
-        <h4>Voeg een video toe</h4>
     </div>
-      
+    <div class="ion-text-center">
+      <h4>Geef het recept een naam</h4>
+    </div>
 
     <ion-list>
       <ion-item>
-        <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" inputmode="text" placeholder="Voeg een URL van een video toe" required="true"></ion-input>
-        <ion-icon name="share-alt" slot="end"></ion-icon>
+        <ion-input [(ngModel)]="recipeName" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true"
+          inputmode="text" placeholder="Voer een naam in" required="true"></ion-input>
+        <ion-icon name="md-create" slot="end"></ion-icon>
       </ion-item>
     </ion-list>
 
+    <div class="ion-text-center">
+      <h4>Selecteer de ingrediënten die nodig zijn voor het recept</h4>
+    </div>
+    <ion-item>
+      <ion-label>ingrediënten</ion-label>
+      <ion-select multiple="true" cancelText="Cancel" okText="Select" [(ngModel)]="ingredients">
+        <ion-select-option value="bacon">Bacon</ion-select-option>
+        <ion-select-option value="olives">Black Olives</ion-select-option>
+        <ion-select-option value="xcheese">Extra Cheese</ion-select-option>
+        <ion-select-option value="peppers">Green Peppers</ion-select-option>
+        <ion-select-option value="mushrooms">Mushrooms</ion-select-option>
+        <ion-select-option value="onions">Onions</ion-select-option>
+        <ion-select-option value="pepperoni">Pepperoni</ion-select-option>
+        <ion-select-option value="pineapple">Pineapple</ion-select-option>
+        <ion-select-option value="sausage">Sausage</ion-select-option>
+        <ion-select-option value="Spinach">Spinach</ion-select-option>
+      </ion-select>
+    </ion-item>
+    <div class="ion-text-center">
+      <h4>Selecteer de categorie</h4>
+    </div>
+    <ion-item>
+      <ion-label>Categorie</ion-label>
+      <ion-select multiple="true" cancelText="Cancel" okText="Select" [(ngModel)]="category">
+        <ion-select-option value="Vlees">Vlees</ion-select-option>
+        <ion-select-option value="Vis">Vis</ion-select-option>
+        <ion-select-option value="Vegetarisch">Vegetarisch</ion-select-option>
+
+      </ion-select>
+    </ion-item>
+    <div class="ion-text-center">
+      <h1>Stap 2</h1>
+    </div>
+
+    <div class="ion-text-center">
+      <h4>Voor wanneer is het gerecht?</h4>
+    </div>
+
+    <ion-item>
+      <ion-label>Wanneer</ion-label>
+      <ion-select multiple="true" cancelText="Cancel" okText="Select" [(ngModel)]="mealTime">
+        <ion-select-option value="Ochtend">Ochtend</ion-select-option>
+        <ion-select-option value="Middag">Middag</ion-select-option>
+        <ion-select-option value="Avond">Avond</ion-select-option>
+      </ion-select>
+    </ion-item>
+
+    <div class="ion-text-center">
+      <h4>Voor hoeveel personen is het gerecht?</h4>
+    </div>
+
+    <ion-list>
+      <ion-item>
+        <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" inputmode="text"
+          placeholder="Voer aantal personen in" required="true" [(ngModel)]="people"></ion-input>
+        <ion-icon name="md-contacts" slot="end"></ion-icon>
+      </ion-item>
+    </ion-list>
+
+    <div class="ion-text-center">
+      <h4>Hoelang duurt het bereiden van het gerecht?</h4>
+    </div>
+
+    <ion-list>
+      <ion-item>
+        <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" inputmode="text"
+          placeholder="Voer een tijd in" required="true" [(ngModel)]='prepTime'></ion-input>
+        <ion-icon name="md-timer" slot="end"></ion-icon>
+      </ion-item>
+    </ion-list>
+
+    <div class="ion-text-center">
+      <h1>Stap 3</h1>
+    </div>
+
+    <ion-list lines="none">
+      <form [formGroup]="myForm">
+        <ion-item *ngFor="let control of myForm.controls | keyvalue">
+          <ion-input required type="text" [formControlName]="control.key" placeHolder="Voer hier je beschrijving in" [(ngModel)]="steps">
+          </ion-input>
+          <ion-icon (click)="removeControl(control)" name="close-circle"></ion-icon>
+        </ion-item>
+      </form>
+    </ion-list>
+
+    <ion-button expand="full" color="light" (click)="addControl()">Voeg een stap toe</ion-button>
+
+    <div class="ion-text-center">
+      <h1>Stap 4</h1>
+    </div>
+
+    <div class="ion-text-center">
+      <h4>Voeg een foto toe</h4>
+    </div>
 
 
 
+    <div class="ion-text-center">
+      <h4>Voeg een video toe</h4>
+    </div>
 
-          <div class="ion-padding">
-            <ion-button (click)= "toFourthPage()"expand="block" type="submit" class="ion-no-margin">Voeg het recept toe</ion-button>
-          </div>
-  
-     
+
+    <ion-list>
+      <ion-item>
+        <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" inputmode="text"
+          placeholder="Voeg een URL van een video toe" required="true" [(ngModel)]="videoLink"></ion-input>
+        <ion-icon name="share-alt" slot="end"></ion-icon>
+      </ion-item>
+    </ion-list>
+    <div class="ion-padding">
+      <ion-button (click)="uploadRecipe()" expand="block" type="submit" class="ion-no-margin">Voeg het recept toe
+      </ion-button>
+    </div>
   </div>
 </ion-content>
-
-
-
-  
-
