--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -34,12 +34,15 @@
         </div>
       </ng-container>
     </div>
- 
     
     <ion-button expand="full" class="submit-btn" type="submit"  [disabled]="!validations_form.valid">Registreer</ion-button>
     <label class="error-message">{{errorMessage}}</label>
     <label class="success-message">{{successMessage}}</label>
   </form>
+
+  <p class="go-to-login" text-center>Meld je aan met een google account</p>
+  <ion-button expand="full" color="danger" (click)="goLoginPage()">Meld je aan</ion-button>
+
   <p class="go-to-login" text-center>Al een account?</p>
   <ion-button expand="full" color="primary" (click)="goLoginPage()">Login</ion-button>
 
