--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -40,8 +40,8 @@
     <label class="success-message">{{successMessage}}</label>
   </form>
 
-  <p class="go-to-login" text-center>Meld je aan met een google account</p>
-  <ion-button expand="full" color="danger" (click)="goLoginPage()">Meld je aan</ion-button>
+  <!-- <p class="go-to-login" text-center>Meld je aan met een google account</p>
+  <ion-button expand="full" color="danger" (click)="goLoginPage()">Meld je aan</ion-button> -->
 
   <p class="go-to-login" text-center>Al een account?</p>
   <ion-button expand="full" color="primary" (click)="goLoginPage()">Login</ion-button>
