--- a/src/app/meatrecipes/meatrecipes.page.html
+++ b/src/app/meatrecipes/meatrecipes.page.html
@@ -10,7 +10,7 @@
 <ion-content>
   <ion-searchbar showcancelbutton="" (keyup)="filterList($event)"></ion-searchbar>
   <ion-card tappable *ngFor="let item of recipeList">
-    <img src="../../assets/images/{{ item.image }}.jpg"/>
+    <img src="{{ item.image }}"/>
     <ion-card-header>
       <ion-card-subtitle>Bevat {{ item.ingredient }}</ion-card-subtitle>
       <ion-card-title>{{item.name}}</ion-card-title>
