--- a/src/app/meatrecipes/meatrecipes.page.html
+++ b/src/app/meatrecipes/meatrecipes.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   <ion-searchbar showcancelbutton="" (keyup)="filterList($event)"></ion-searchbar>
-  <ion-card tappable (click)="toRecipe()" *ngFor="let item of recipeList">
+  <ion-card tappable (click)="toRecipe({item.id})" *ngFor="let item of recipeList">
     <img src="{{ item.image }}"/>
     <ion-card-header>
       <ion-card-subtitle>Bevat {{ item.ingredient }}</ion-card-subtitle>
