--- a/src/app/veganrecipes/veganrecipes.page.html
+++ b/src/app/veganrecipes/veganrecipes.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   <ion-searchbar showcancelbutton="" (keyup)="filterList($event)"></ion-searchbar>
-  <ion-card tappable *ngFor="let item of recipeList">
+  <ion-card tappable (click)="toRecipe() *ngFor="let item of recipeList">
     <img src="../../assets/images/{{ item.image }}.jpg"/>
     <ion-card-header>
       <ion-card-subtitle>Bevat {{ item.ingredient }}</ion-card-subtitle>
