--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -137,7 +137,7 @@
       </ion-item>
     </ion-list>
     <div class="ion-padding">
-      <ion-button (click)="uploadRecipe()" expand="block" type="submit" class="ion-no-margin">Voeg het recept toe
+      <ion-button (click)="uploadAlert()" expand="block" type="submit" class="ion-no-margin">Voeg het recept toe
       </ion-button>
     </div>
   </div>
