--- a/src/app/meatrecipes/meatrecipes.page.html
+++ b/src/app/meatrecipes/meatrecipes.page.html
@@ -11,7 +11,7 @@
   <ion-searchbar showcancelbutton="" (keyup)="filterList($event)"></ion-searchbar>
   <div *ngFor="let item of recipeList">
     <ion-card tappable (click)="toRecipe(item.id)" >
-      <img src="../../assets/images/{{ item.image }}.jpg"/>
+      <img src="{{ item.image }}"/>
       <ion-card-header>
         <ion-card-subtitle>Bevat {{ item.ingredient }}</ion-card-subtitle>
         <ion-card-title>{{item.name}}</ion-card-title>
