--- a/src/app/inloggen/inloggen.page.html
+++ b/src/app/inloggen/inloggen.page.html
@@ -24,7 +24,7 @@
     </div>
  
     <ion-item>
-      <ion-label  position="floating" color="primary">Password</ion-label>
+      <ion-label  position="floating" color="primary">Wachtwoord</ion-label>
       <ion-input type="password" formControlName="password" class="form-controll" required></ion-input>
     </ion-item>
     <div class="validation-errors">
