--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -106,8 +106,7 @@
     <ion-list lines="none">
       <form [formGroup]="myForm">
         <ion-item *ngFor="let control of myForm.controls | keyvalue">
-          <ion-input required type="text" [formControlName]="control.key" placeHolder="Voer hier je beschrijving in" [(ngModel)]="steps">
-          </ion-input>
+          <ion-input required type="text" [formControlName]="control.key" placeHolder="Voer hier je beschrijving in"></ion-input>
           <ion-icon (click)="removeControl(control)" name="close-circle"></ion-icon>
         </ion-item>
       </form>
