--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -9,15 +9,15 @@
 </ion-header>
 
 <ion-content >
-  <ion-card tappable (click)="toMeatRecipes()" >
+  <ion-card tappable (click)="toMeatRecipes('Vlees')" >
     <img src="../../assets/images/category-meat.png"/>
   </ion-card>
 
-  <ion-card tappable (click)="toFishRecipes()" >
+  <ion-card tappable (click)="toFishRecipes('Vis')" >
     <img src="../../assets/images/category-fish.png"/>
   </ion-card>
 
-  <ion-card tappable (click)="toVeganRecipes()" >
+  <ion-card tappable (click)="toVeganRecipes('Vegetarisch')" >
     <img src="../../assets/images/category-vegetarian.png"/>
   </ion-card>
 </ion-content>
