--- a/src/app/categories/categories.page.html
+++ b/src/app/categories/categories.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Vis gerechten</ion-title>
+    <ion-title>{{this.category}} gerechten</ion-title>
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
       </ion-buttons>
@@ -11,7 +11,7 @@
   <ion-searchbar showcancelbutton="" (keyup)="filterList($event)"></ion-searchbar>
   <div *ngFor="let item of recipeList">
     <ion-card tappable (click)="toRecipe(item.id)" >
-      <img src="../../assets/images/{{ item.image }}.jpg"/>
+      <img src="{{ item.image }}"/>
       <ion-card-header>
         <ion-card-subtitle>Bevat {{ item.ingredient }}</ion-card-subtitle>
         <ion-card-title>{{item.name}}</ion-card-title>
