--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,16 +1,16 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Recept toevoegen
-    </ion-title>
-    <ion-buttons slot='start'>
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
+    <ion-title>Voeg een recept toe</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+      </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  
+ 
+<ion-content padding>
+  <form class="form" [formGroup]="validations_form">
+    
   <div class="ion-padding">
     <div class="ion-text-center">
       <h1>Stap 1</h1>
@@ -18,14 +18,20 @@
     <div class="ion-text-center">
       <h4>Geef het recept een naam</h4>
     </div>
-
-    <ion-list>
-      <ion-item>
-        <ion-input [(ngModel)]="recipeName" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true"
-          inputmode="text" placeholder="Voer een naam in" required="true"></ion-input>
-        <ion-icon name="md-create" slot="end"></ion-icon>
-      </ion-item>
-    </ion-list>
+    </div>
+ 
+    <ion-item>
+      <ion-input formControlName="naam" [(ngModel)]="recipeName" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true"
+        inputmode="text" placeholder="Voer een naam in" required="true"></ion-input>
+      <ion-icon name="md-create" slot="end"></ion-icon>
+    </ion-item>
+    <div class="validation-errors">
+      <ng-container *ngFor="let validation of validation_messages.naam">
+        <div class="error-message" *ngIf="validations_form.get('naam').hasError(validation.type) && (validations_form.get('naam').dirty || validations_form.get('naam').touched)">
+          {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
 
     <div class="ion-text-center">
       <h4>Selecteer de ingrediënten die nodig zijn voor het recept</h4>
@@ -45,8 +51,9 @@
         <ion-select-option value="Spinazie">Spinazie</ion-select-option>
       </ion-select>
     </ion-item>
+
     <div class="ion-text-center">
-      <h4>Selecteer de categorie</h4>
+      <h4>Selecteer een categorie</h4>
     </div>
 
     <ion-item>
@@ -58,9 +65,10 @@
       </ion-select>
     </ion-item>
 
+
     <div class="ion-text-center">
       <h1>Stap 2</h1>
-    </div>
+    </div>  
 
     <div class="ion-text-center">
       <h4>Voor wanneer is het gerecht?</h4>
@@ -79,27 +87,37 @@
       <h4>Voor hoeveel personen is het gerecht?</h4>
     </div>
 
-    <ion-list>
-      <ion-item>
-        <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" inputmode="text"
-          placeholder="Voer aantal personen in" required="true" [(ngModel)]="people"></ion-input>
-        <ion-icon name="md-contacts" slot="end"></ion-icon>
-      </ion-item>
-    </ion-list>
+    <ion-item>
+      <ion-input formControlName="personen" [(ngModel)]="people" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true"
+        inputmode="text" placeholder="Voer aantal personen in" required="true"></ion-input>
+      <ion-icon name="md-contacts" slot="end"></ion-icon>
+    </ion-item>
+    <div class="validation-errors">
+      <ng-container *ngFor="let validation of validation_messages.personen">
+        <div class="error-message" *ngIf="validations_form.get('personen').hasError(validation.type) && (validations_form.get('personen').dirty || validations_form.get('personen').touched)">
+          {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
 
     <div class="ion-text-center">
       <h4>Hoelang duurt het bereiden van het gerecht?</h4>
     </div>
 
-    <ion-list>
-      <ion-item>
-        <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" inputmode="text"
-          placeholder="Voer een tijd in minuten in" required="true" [(ngModel)]='prepTime'></ion-input>
-        <ion-icon name="md-timer" slot="end"></ion-icon>
-      </ion-item>
-    </ion-list>
+    <ion-item>
+      <ion-input formControlName="minuten" [(ngModel)]="steps" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true"
+        inputmode="text" placeholder="Voer een tijd in minuten in" required="true"></ion-input>
+      <ion-icon name="md-contacts" slot="end"></ion-icon>
+    </ion-item>
+    <div class="validation-errors">
+      <ng-container *ngFor="let validation of validation_messages.minuten">
+        <div class="error-message" *ngIf="validations_form.get('minuten').hasError(validation.type) && (validations_form.get('minuten').dirty || validations_form.get('minuten').touched)">
+          {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
 
-    <div class="ion-text-center">
+     <div class="ion-text-center">
       <h1>Stap 3</h1>
     </div>
 
@@ -128,18 +146,11 @@
       <h4>Voeg een video toe</h4>
     </div>
 
-    <ion-list>
-      <ion-item>
-        <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" inputmode="text"
-          placeholder="Voeg een URL toe" required="true" [(ngModel)]="videoLink"></ion-input>
-        <ion-icon name="share-alt" slot="end"></ion-icon>
-      </ion-item>
-    </ion-list>
-    <div class="ion-padding">
-      <ion-button (click)="uploadAlert()" expand="block" type="submit" class="ion-no-margin">Voeg het recept toe
-      </ion-button>
-    </div>
-  </div>
 
-  
+
+
+    <ion-button (click)="uploadAlert()" expand="block" class="submit-btn" type="submit"  [disabled]="!validations_form.valid">Voeg het recept toe</ion-button>
+    <label class="error-message">{{errorMessage}}</label>
+  </form>
+
 </ion-content>
