--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -3,9 +3,9 @@
 
   <section>
     <div class="ion-padding">
-      <ion-button color= "light" (click)="toRegisterPage()" expand="block" type="submit" class="ion-no-margin">Meld je aan!</ion-button>
-       <p class="go-to-login" text-center>Meld je aan met een google account</p>
-      <ion-button expand="full" color="danger" (click)="goLoginPage()">Meld je aan</ion-button>
+      <ion-button color= "light" (click)="toRegisterPage()" expand="block" type="submit" class="ion-no-margin">Meld je aan</ion-button>
+       <p class="go-to-login" text-center>of gebruik een</p>
+      <ion-button expand="full" color="danger" (click)="goLoginPage()">google account</ion-button>
       <p class="go-to-login">Al een account? <a (click)="toLoginPage()">Log in</a></p> 
     </div>
     
