--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color= "secondary" >
     <ion-buttons slot='start'>
       <ion-menu-button ></ion-menu-button>
     </ion-buttons>
@@ -10,14 +10,14 @@
 
 <ion-content >
   <ion-card tappable (click)="toMeatRecipes('Vlees')" >
-    <img src="../../assets/images/category-meat.png"/>
+    <img src="../../assets/images/vlees.jpg"/>
   </ion-card>
 
   <ion-card tappable (click)="toFishRecipes('Vis')" >
-    <img src="../../assets/images/category-fish.png"/>
+    <img src="../../assets/images/vis.jpg"/>
   </ion-card>
 
   <ion-card tappable (click)="toVeganRecipes('Vegetarisch')" >
-    <img src="../../assets/images/category-vegetarian.png"/>
+    <img src="../../assets/images/vegan.png"/>
   </ion-card>
 </ion-content>
