--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -140,7 +140,7 @@
 
     <div class="uploadbtn">
       <label>
-        <input (change)="uploadImage($event)" type="file" class="image-upload" accept="image/*">
+        <input (change)="saveEvent($event)" type="file" class="image-upload" accept="image/*">
       </label>
     </div>
 
