--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -122,10 +122,12 @@
     </div>
 
     <ion-list lines="none">
+      <form class="form" [formGroup]="myForm">
         <ion-item *ngFor="let control of myForm.controls | keyvalue">
           <ion-input required type="text" [formControlName]="control.key" placeHolder="Voer hier je beschrijving in"></ion-input>
           <ion-icon (click)="removeControl(control)" name="close-circle"></ion-icon>
         </ion-item>
+      </form>
     </ion-list>
 
     <ion-button expand="full" color="light" (click)="addControl()">Voeg een stap toe</ion-button>
