--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -10,11 +10,11 @@
 
 <ion-content >
   <ion-card tappable (click)="toMeatRecipes('Vlees')" >
-    <img src="../../assets/images/Vlees.jpg"/>
+    <img src="../../assets/images/vlees.jpg"/>
   </ion-card>
 
   <ion-card tappable (click)="toFishRecipes('Vis')" >
-    <img src="../../assets/images/Vis.jpg"/>
+    <img src="../../assets/images/vis.jpg"/>
   </ion-card>
 
   <ion-card tappable (click)="toVeganRecipes('Vegetarisch')" >
