Stap 2/3/4 pagina verwijderd

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -7,6 +7,8 @@
        <p class="go-to-login" text-center>of gebruik een</p>
       <ion-button expand="full" color="danger" (click)="goLoginPage()">google account</ion-button>
       <p class="go-to-login">Al een account? <a (click)="toLoginPage()">Log in</a></p> 
+      <p class="go-to-login">Admin? <a (click)="skipLogin()">Skip login</a></p> 
+
     </div>
     
   </section>
