--- a/src/app/categories/categories.page.scss
+++ b/src/app/categories/categories.page.scss
@@ -1,3 +1,8 @@
-.toolbar-background {
-    background-color: blue;
-  }
+ion-card{
+  display: flex;
+  flex-direction: column;
+  width: 100% !important;
+  margin: 0 !important;
+  border-radius: 0px;
+  box-shadow: 0 !important;
+}
