--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -117,28 +117,49 @@
       </ng-container>
     </div>
 
+
+
+
+
+
+
      <div class="ion-text-center">
       <h1>Stap 3</h1>
     </div>
+
+    <ion-list lines="none">
     <form>
     <ion-item class="container border mb-4 p-3" *ngFor="let step of steps; let i = index;">
       <div class="row">
         <div>
-          <h5>Stap {{i + 1}}</h5>
+          <h5>{{i + 1}}</h5>
         </div>
         <div class="text-right">
         </div>
       </div>
+
+
       <div class="form-group">
-        <input type="text" class="form-control" [(ngModel)]="step.step" name="step_{{i}}" placeholder="Voeg .. toe"/>
-        <button type="button" class="btn btn-danger btn-sm" (click)="removeSteps(i)">Verwijder stap</button>
+        <ion-item>
+        <ion-input required type="text" [(ngModel)]="step.step" name="step_{{i}}" placeholder="Voer hier je beschrijving in"></ion-input>
+        <ion-icon (click)="removeSteps(i)" name="close-circle"></ion-icon>
+      </ion-item>
       </div>
+      <div class="text-right">
+    </div>
     </ion-item>
   </form>
-    
-    <div class="text-right">
-        <input type="submit" class="btn btn-success" (click)="addSteps()" value="Voeg stap toe"/>
-    </div>
+</ion-list>
+
+<ion-button expand="full" color="light" (click)="addSteps()">Voeg een stap toe</ion-button>
+
+  
+
+
+
+
+
+
 
     <div class="ion-text-center">
       <h1>Stap 4</h1>
