--- a/src/app/recept/recept.page.html
+++ b/src/app/recept/recept.page.html
@@ -44,6 +44,7 @@
       <section>
         <ion-button color="danger">Stappen</ion-button>
         <ion-button color="danger">Beoordeel recept</ion-button>
+        <ion-button color="primary" (click)="addFavorite()">Voeg toe aan favorieten</ion-button>
       </section>
 
 
