--- a/src/app/favorieten/favorieten.page.html
+++ b/src/app/favorieten/favorieten.page.html
@@ -9,5 +9,10 @@
 
 
 <ion-content>
-
+<ion-list *ngFor="let item of favoriteList">
+  <ion-item>
+    <h5>{{item.name}}</h5>
+    <ion-button (click)="toRecipe(item.recipe_id)">Ga naar recept</ion-button>
+  </ion-item>
+</ion-list>
 </ion-content>
