--- a/src/app/recept/recept.page.html
+++ b/src/app/recept/recept.page.html
@@ -41,14 +41,16 @@
         </div>
       </ion-item>
 
+    </ion-list>
+
       <section>
-        <ion-button color="danger">Stappen</ion-button>
+        <ion-button (click)="goToSteps()" color="danger">Stappen</ion-button>
         <ion-button color="danger">Beoordeel recept</ion-button>
       </section>
 
 
 
-    </ion-list>
+  
 
    </div>
   </ion-content>
