--- a/src/app/inloggen/inloggen.page.html
+++ b/src/app/inloggen/inloggen.page.html
@@ -7,13 +7,16 @@
   </ion-toolbar>
 </ion-header>
 
- 
+
+
+
 <ion-content padding>
   <form class="form" [formGroup]="validations_form"  (ngSubmit)="loginUser(validations_form.value)">
+    
  
     <ion-item>
       <ion-label  position="floating" color="primary">Email</ion-label>
-      <ion-input type="text" formControlName="email"></ion-input>
+      <ion-input type="text"[(ngModel)]="email" formControlName="email"></ion-input>
     </ion-item>
     <div class="validation-errors">
       <ng-container *ngFor="let validation of validation_messages.email">
@@ -25,7 +28,7 @@
  
     <ion-item>
       <ion-label  position="floating" color="primary">Wachtwoord</ion-label>
-      <ion-input type="password" formControlName="password" class="form-controll" required></ion-input>
+      <ion-input type="password" [(ngModel)]="password" formControlName="password" class="form-controll" required></ion-input>
     </ion-item>
     <div class="validation-errors">
       <ng-container *ngFor="let validation of validation_messages.password">
@@ -35,7 +38,7 @@
       </ng-container>
     </div>
  
-    <ion-button  class="submit-btn" type="submit"  [disabled]="!validations_form.valid">Log In</ion-button>
+    <ion-button (click)="signIn()"  [disabled]="!validations_form.valid">Log In</ion-button>
  
     <label class="error-message">{{errorMessage}}</label>
   </form>
