--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -13,7 +13,7 @@
 
     <ion-item>
       <ion-label  position="floating" color="primary">Email</ion-label>
-      <ion-input type="text" formControlName="email"></ion-input>
+      <ion-input type="text" [(ngModel)]="email" formControlName="email"></ion-input>
     </ion-item>
     <div class="validation-errors">
       <ng-container *ngFor="let validation of validation_messages.email">
@@ -25,7 +25,7 @@
  
     <ion-item>
       <ion-label  position="floating" color="primary">Password</ion-label>
-      <ion-input type="password" formControlName="password" class="form-controll" required></ion-input>
+      <ion-input type="password" [(ngModel)]="password"   formControlName="password" class="form-controll" required></ion-input>
     </ion-item>
     <div class="validation-errors">
       <ng-container *ngFor="let validation of validation_messages.password">
@@ -35,7 +35,7 @@
       </ng-container>
     </div>
     
-    <ion-button expand="full" class="submit-btn" type="submit"  [disabled]="!validations_form.valid">Registreer</ion-button>
+    <ion-button expand="full" (click)="signUp()" [disabled]="!validations_form.valid">Registreer</ion-button>
     <label class="error-message">{{errorMessage}}</label>
     <label class="success-message">{{successMessage}}</label>
   </form>
