--- a/src/app/recept/recept.page.html
+++ b/src/app/recept/recept.page.html
@@ -45,7 +45,7 @@
 
       <section>
         <ion-button (click)="goToSteps()" color="danger">Stappen</ion-button>
-        <ion-button color="danger">Beoordeel recept</ion-button>
+        <ion-button (click)="goToReview()"color="danger">Beoordeel recept</ion-button>
         <ion-button color="primary" (click)="addFavorite()">Voeg toe aan favorieten</ion-button>
       </section>
 
