--- a/src/app/inloggen/inloggen.page.html
+++ b/src/app/inloggen/inloggen.page.html
@@ -43,7 +43,7 @@
     <label class="error-message">{{errorMessage}}</label>
   </form>
   <p class="go-to-register">
-    Nog geen account? <a (click)="goToRegisterPage()">Maak een account aan.</a>
+    Nog geen account? <a (click)="goToRegisterPage()"><ion-text color="primary">Maak een account aan</ion-text> </a>
   </p>
   
 </ion-content>
