--- a/src/app/newpassword/newpassword.page.html
+++ b/src/app/newpassword/newpassword.page.html
@@ -1,12 +1,28 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Vraag nieuw wachtwoord aan</ion-title>
+    <ion-title>Nieuw wachtwoord</ion-title>
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
       </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
+  <form class="form" [formGroup]="validations_form">
 
+  <ion-item>
+    <ion-label  position="floating" color="primary">Email</ion-label>
+    <ion-input type="text" formControlName="email" [(ngModel)]='forgotEmail'></ion-input>
+  </ion-item>
+  <div class="validation-errors">
+    <ng-container *ngFor="let validation of validation_messages.email">
+      <div class="error-message" *ngIf="validations_form.get('email').hasError(validation.type) && (validations_form.get('email').dirty || validations_form.get('email').touched)">
+        {{ validation.message }}
+      </div>
+    </ng-container>
+  </div>
+
+  <ion-button shape="round" fill="outline">Stuur email</ion-button>
+  
+</form>
 </ion-content>
