--- a/src/app/newpassword/newpassword.page.html
+++ b/src/app/newpassword/newpassword.page.html
@@ -12,7 +12,7 @@
 
   <ion-item>
     <ion-label  position="floating" color="primary">Email</ion-label>
-    <ion-input type="text" formControlName="email" [(ngModel)]='forgotEmail'></ion-input>
+    <ion-input type="text" formControlName="email"></ion-input>
   </ion-item>
   <div class="validation-errors">
     <ng-container *ngFor="let validation of validation_messages.email">
@@ -22,7 +22,7 @@
     </ng-container>
   </div>
 
-  <ion-button shape="round" fill="outline">Stuur email</ion-button>
-  
+  <ion-button shape="round" fill="outline" (click)="uploadAlert()">Stuur email</ion-button>
+  <label class="error-message">{{errorMessage}}</label>
 </form>
 </ion-content>
