--- a/src/app/newpassword/newpassword.page.html
+++ b/src/app/newpassword/newpassword.page.html
@@ -8,21 +8,13 @@
 </ion-header>
 
 <ion-content padding>
-  <form class="form" [formGroup]="validations_form">
 
   <ion-item>
     <ion-label  position="floating" color="primary">Email</ion-label>
-    <ion-input type="text" formControlName="email" [(ngModel)]='forgotEmail'></ion-input>
+    <ion-input type="text"[(ngModel)]='forgotEmail' ></ion-input>
   </ion-item>
-  <div class="validation-errors">
-    <ng-container *ngFor="let validation of validation_messages.email">
-      <div class="error-message" *ngIf="validations_form.get('email').hasError(validation.type) && (validations_form.get('email').dirty || validations_form.get('email').touched)">
-        {{ validation.message }}
-      </div>
-    </ng-container>
-  </div>
 
   <ion-button shape="round" fill="outline">Stuur email</ion-button>
   
-</form>
+
 </ion-content>
