--- a/src/app/newpassword/newpassword.page.html
+++ b/src/app/newpassword/newpassword.page.html
@@ -11,7 +11,7 @@
 
   <ion-item>
     <ion-label  position="floating" color="primary">Email</ion-label>
-    <ion-input type="text" formControlName="email"></ion-input>
+    <ion-input type="text" [(ngModel)]="email"></ion-input>
   </ion-item>
 
   <ion-button shape="round" fill="outline" (click)="uploadAlert()">Stuur email</ion-button>
