--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -10,14 +10,14 @@
 
 <ion-content  *ngIf="authenticationService.userData | async" >
   <ion-card tappable (click)="toMeatRecipes('Vlees')" >
-    <img src="../../assets/images/Vlees.jpg"/>
+    <img src="../../assets/images/vlees.jpg"/>
   </ion-card>
 
   <ion-card tappable (click)="toFishRecipes('Vis')" >
-    <img src="../../assets/images/Vis.jpg"/>
+    <img src="../../assets/images/vis.jpg"/>
   </ion-card>
 
   <ion-card tappable (click)="toVeganRecipes('Vegetarisch')" >
-    <img src="../../assets/images/Vega.jpg"/>
+    <img src="../../assets/images/vegan.jpg"/>
   </ion-card>
 </ion-content>
