--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -18,6 +18,6 @@
   </ion-card>
 
   <ion-card tappable (click)="toVeganRecipes('Vegetarisch')" >
-    <img src="../../assets/images/vegan.jpg"/>
+    <img src="../../assets/images/vega.jpg"/>
   </ion-card>
 </ion-content>
