--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -10,14 +10,14 @@
 
 <ion-content  *ngIf="authenticationService.userData | async" >
   <ion-card tappable (click)="toMeatRecipes('Vlees')" >
-    <img src="../../assets/images/vlees.jpg"/>
+    <img src="https://firebasestorage.googleapis.com/v0/b/recipely-inc.appspot.com/o/vlees.jpg?alt=media&token=d24855f9-c63c-4543-891f-9b48b0a26152"/>
   </ion-card>
 
   <ion-card tappable (click)="toFishRecipes('Vis')" >
-    <img src="../../assets/images/vis.jpg"/>
+    <img src="https://firebasestorage.googleapis.com/v0/b/recipely-inc.appspot.com/o/vis.jpg?alt=media&token=496be3f8-d43b-4367-bada-332b1811db1e"/>
   </ion-card>
 
   <ion-card tappable (click)="toVeganRecipes('Vegetarisch')" >
-    <img src="../../assets/images/vega.jpg"/>
+    <img src="https://firebasestorage.googleapis.com/v0/b/recipely-inc.appspot.com/o/vegan.jpg?alt=media&token=00e93e9f-bfd4-4d82-98f9-def338ea6cdc"/>
   </ion-card>
 </ion-content>
