--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -4,11 +4,11 @@
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="tab1">
         <ion-icon name="md-restaurant"></ion-icon>
-        <ion-label>categorieën</ion-label>
+        <ion-label>Categorieën</ion-label>
       </ion-tab-button>
       <ion-tab-button tab="tab2">
         <ion-icon name="md-ribbon"></ion-icon>
-        <ion-label>Beste recepten</ion-label>
+        <ion-label>Mijn recepten</ion-label>
       </ion-tab-button>
       <ion-tab-button tab="tab3">
         <ion-icon name="md-add-circle"></ion-icon>
