--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -13,13 +13,13 @@
   <section>
      <div class="ion-padding">
     <hr>
-      <ion-button color= "light" (click)="toRegisterPage()" expand="block" type="submit" class="ion-no-margin">Registreer</ion-button>
+      <ion-button shape="round" color= "light" (click)="toRegisterPage()" expand="block" type="submit" class="ion-no-margin">Registreer</ion-button>
     <hr>
     <hr>
-      <ion-button expand="full" (click)="authenticationService.GoogleAuth()" color="danger" (click)="goLoginPage()">Registreer met Google</ion-button>
+      <ion-button shape="round" expand="full" (click)="authenticationService.GoogleAuth()" color="danger" (click)="goLoginPage()">Registreer met Google</ion-button>
     <hr>
     <hr>
-      <ion-button expand="full" (click)="toLoginPage()" color="success" (click)="goLoginPage()">Login met je account</ion-button>
+      <ion-button shape="round" expand="full" (click)="toLoginPage()" color="success" (click)="goLoginPage()">Login met je account</ion-button>
     </div>
     
   </section>
