--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -13,7 +13,7 @@
   <section>
      <div class="ion-padding">
     <hr>
-      <ion-button shape="round" expand="full" (click)="goLoginPage()" color="light" >Registreer</ion-button>
+      <ion-button shape="round" expand="full" (click)="toRegisterPage()" color="light" >Registreer</ion-button>
     <hr>
     <hr>
       <ion-button shape="round" expand="full" (click)="authenticationService.GoogleAuth()" color="danger" (click)="goLoginPage()">Registreer met Google</ion-button>
