--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,3 +1,8 @@
 .background-image{
     --background: url(../../assets/images/wallpaper.jpg) 0 0/100% 100% no-repeat;
 }
+
+.home-color {
+    color:white;
+    font-weight: bold;
+}
