--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -13,12 +13,15 @@
   <section>
      <div class="ion-padding">
     <hr>
+    <h4 class="ion-text-center home-color">Registreer</h4>
       <ion-button shape="round" expand="full" (click)="toRegisterPage()" color="light" >Registreer</ion-button>
     <hr>
     <hr>
+    <h4 class="ion-text-center home-color">Meld je aan met Google</h4>
       <ion-button shape="round" expand="full" (click)="authenticationService.GoogleAuth()" color="danger" (click)="goLoginPage()">Registreer met Google</ion-button>
     <hr>
     <hr>
+    <h4 class="ion-text-center bold home-color" >Login</h4>
       <ion-button shape="round" expand="full" (click)="toLoginPage()" color="success" (click)="goLoginPage()">Login met je account</ion-button>
     </div>
     
